// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MonteCarloReportGenerator Snapshot Tests Edge Case Snapshots generates consistent output with OR-only breakdown: or-only-breakdown-report 1`] = `
"# Monte Carlo Analysis Report

**Expression**: test:or_only_expression
**Generated**: [TIMESTAMP]
**Distribution**: uniform
**Sample Size**: 10000
**Sampling Mode**: static - Prototype-gated sampling (emotions derived from mood axes; not independent)
**Gating model**: HARD (gate fail => final = 0)
**Regime Note**: Report includes global vs in-regime (mood-pass) statistics



---

## Population Summary

- **Total samples**: 10,000 (in-regime 0; 0.00%)
- **Stored contexts**: 4 of 10,000 (in-regime 4; 100.00%; limit 4)
- **Mood regime**: Mood axis constraints derived from gates of emotion/sexual prototypes referenced in prerequisites.
> **Note**: Stored contexts are capped at 4, so sections labeled "Population: stored-*" may not match full-sample counts.


---

## Signal Lineage

- **Raw**: Weighted sum of normalized axes (clamped to 0..1).
- **Gated**: Raw value when gate constraints pass; otherwise 0.
- **Final**: Hard-gated output (final = gated).

**Gate input scales**
- Mood axes: raw [-100, 100] -> normalized [-1, 1]
- Sexual axes: raw [0, 100] -> normalized [0, 1] (sexual_arousal derived, clamped)
- Affect traits: raw [0, 100] -> normalized [0, 1]

---

## Executive Summary

**Trigger Rate**: 15.00% (95% CI: 14.00% - 16.00%)
**Rarity**: frequent

OR-only blocker scenario

---

## Independence Baseline Comparison

This section compares Monte Carlo results against naive probability estimates (assuming clause independence) to identify correlation effects. Deviations indicate clauses are not statistically independent.

| Metric | Value |
|--------|-------|
| Naive probability (product of pass rates) | 100.00% |
| Expected hits per 10,000 samples | 10000.00 |
| Actual hits | 1500 |
| P(0 hits \\| expected=10000.00) | 0 |

### Interpretation

✅ **Normal**: Actual hits (1500) align with expected (10000.0).

### Clause Pass Rate Factors

| Clause | Pass Rate (in-regime) |
|--------|------------------------|
| emotions.joy | 100.00% |
| emotions.curiosity | 100.00% |

---

## Sampling Coverage

**Sampling Mode**: static

### Summary by Domain

| Domain | Variables | Range Coverage | Bin Coverage | Tail Low | Tail High | Zero Rate Avg | Rating |
|--------|-----------|----------------|--------------|----------|-----------|---------------|--------|
| emotions | 3 | 75.00% | 70.00% | 5.00% | 4.00% | N/A | good |
| moodAxes | 3 | 80.00% | 75.00% | 6.00% | 5.00% | N/A | good |

### Lowest Coverage Variables

| Variable | Range Coverage | Bin Coverage | Tail Low | Tail High | Rating |
|----------|----------------|--------------|----------|-----------|--------|
| emotions.joy | 80.00% | 75.00% | 5.00% | 4.00% | good |
| emotions.fear | 70.00% | 65.00% | 4.00% | 3.00% | moderate |

Notes:
- Range coverage is observed span divided by domain span.
- Bin coverage is occupancy across 10 equal-width bins.
- Tail coverage is the share of samples in the bottom/top 10.00% of the domain.
- Variables with unknown domain ranges are excluded from summaries.

### Coverage Conclusions

- emotions: bin coverage is 70%, indicating clumping. Rates may be biased toward a few common regimes.
- emotions: observed range spans only 75% of the domain. This suggests ceilings/floors or gating; feasibility conclusions involving missing ranges are low-confidence.
- Across variables: 1 show truncated range. Those regions are effectively unvalidated by current sampling.
- Feasibility rates may be biased by overrepresented regimes; edge-case prerequisites may be incorrectly labeled rare/impossible.
- Worst range coverage: min=70%.
- Worst upper-tail coverage: min tailHigh=3.0000%.
- Worst lower-tail coverage: min tailLow=4.0000%.

---

## Ground-Truth Witnesses

No triggering states found during simulation.


---

## Blocker Analysis
Signal: final (gate-clamped intensity).
> **[FULL PREREQS]** **[GLOBAL]**
> *Computed from ALL prerequisites using post-gate (final) values.*

### Probability Funnel
- **Full sample**: 10,000
- **Mood-regime pass**: N/A
- **Prototype gate pass**: N/A
- **Threshold pass | gate**: N/A
- **OR union pass | mood-pass**: N/A
- **Final trigger**: 15.00% (1500 / 10000)

### Blocker #3: \`(emotions.joy >= 0.5 OR emotions.curiosity >= 0.4)\`


**Condition**: \`unknown ? N/A\`
**Fail% global**: 25.00% (2500 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: low
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
None







#### Distribution Analysis
- **Average Violation**: 0.10
- **Median (P50)**: 0.00
- **90th Percentile (P90)**: 0.00
- **Interpretation**: Normal distribution

#### Ceiling Analysis
- **Max Observed**: 0.65
- **Threshold**: N/A
- **Ceiling Gap**: 0.00 (achievable)
- **Insight**: Easily achievable

#### Near-Miss Analysis
- **Near-Miss Rate**: 0.00% (epsilon: 0.00)
- **Tunability**: high
- **Insight**: Many near misses

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 0.00%
- **Others Passed Count**: 0
- **Is Decisive**: no
- **Insight**: Not decisive

#### Recommendation
**Action**: tune_threshold
**Priority**: high
**Guidance**: Small adjustment could help

---


> **Note on Sole-Blocker N values**: Each clause's N represents samples where all *other* clauses passed (excluding itself). Different clauses have different "others" sets, so N naturally varies. This is correct behavior indicating which clause is the decisive blocker when others succeed.

## Non-Axis Clause Feasibility

> **[NON-AXIS ONLY]** **[IN-REGIME]**
> *Evaluates emotion/sexual/delta clauses within mood-regime using final values.*

No non-axis clauses found in prerequisites.

## Legend

### Global Metrics
- **Trigger Rate**: Probability (0-100%) that the expression evaluates to true across random samples
- **Confidence Interval**: 95% Wilson score interval indicating statistical certainty of the trigger rate
- **Sample Size**: Number of random state pairs generated for simulation
- **Rarity Categories**: impossible (0%), extremely_rare (<0.001%), rare (<0.05%), normal (<2%), frequent (>=2%)

### Per-Clause Metrics
- **Fail% global**: Percentage of samples where this specific clause evaluated to false (unconditional)
- **Fail% | mood-pass**: Percentage of samples where this clause evaluated to false within the mood regime
- **Gate pass (mood)**: Percentage of mood-regime samples where gates passed (emotion-threshold clauses only)
- **Gate clamp (mood)**: Percentage of mood-regime samples where gates failed and the final intensity was clamped to 0 (emotion-threshold clauses only)
- **Pass | gate (mood)**: Percentage of gate-pass samples that passed the threshold within the mood regime (emotion-threshold clauses only)
- **Pass | mood (mood)**: Percentage of mood-regime samples that passed the threshold (emotion-threshold clauses only)
- **Support**: Number of samples evaluated for this clause (evaluation count)
- **Clamp-trivial (regime)**: Clause is trivially satisfied because gates always clamp intensity to 0 in regime (<= or < thresholds only)
- **Violation Magnitude**: How far the actual value was from the threshold when the clause failed
- **P50 (Median)**: Middle value of violations; 50% of failures had violations at or below this
- **P90 (90th Percentile)**: 90% of failures had violations at or below this; indicates severity of worst cases
- **P95 (95th Percentile)**: 95% of failures had violations at or below this; shows extreme violations
- **P99 (99th Percentile)**: 99% of failures had violations at or below this; identifies outlier violations
- **Min Observed**: Lowest value observed for this variable across all samples
- **Mean Observed**: Average value observed for this variable across all samples
- **Near-Miss Rate**: Percentage of ALL samples where the value was within epsilon of the threshold (close calls)
- **Epsilon**: The tolerance distance used to detect near-misses (typically 5% of value range)
- **Sole-Blocker Rate (N)**: Failure rate among samples where ALL OTHER clauses passed. N differs per clause because each clause excludes itself from the "others" check: Clause A's N = samples where B,C,D... passed; Clause B's N = samples where A,C,D... passed. This variance is mathematically correct and order-invariant
- **Bound**: The relevant extreme value for verifying Gap. For \`>=\` operators: Max Observed (highest value seen). For \`<=\` operators: Min Observed (lowest value seen)
- **Ceiling Gap**: Direction-aware calculation. For \`>=\` operators: (Threshold - Max Observed). For \`<=\` operators: (Min Observed - Threshold). Positive = threshold unreachable; negative = threshold achievable

### Tunability Levels
- **High**: >10% near-miss rate; threshold adjustments will help significantly
- **Moderate**: 2-10% near-miss rate; threshold adjustments may help somewhat
- **Low**: <2% near-miss rate; threshold adjustments won't help; fix upstream

### Severity Levels
- **Critical**: Ceiling detected or fundamentally broken condition
- **High**: Decisive blocker with tuning potential
- **Medium**: Moderate contributor to failures
- **Low**: Other clauses fail first; lower priority

### Recommended Actions
- **redesign**: Condition is fundamentally problematic; rethink the logic
- **tune_threshold**: Adjust threshold value; quick win available
- **adjust_upstream**: Modify prototypes, gates, or weights that feed this variable
- **lower_priority**: Focus on other blockers first
- **investigate**: Needs further analysis

### Problem Flags
- **[CEILING]**: Threshold is unreachable (max observed never reaches threshold)
- **[DECISIVE]**: This clause is the primary bottleneck
- **[TUNABLE]**: Many samples are borderline; small adjustments help
- **[UPSTREAM]**: Values are far from threshold; fix upstream data
- **[OUTLIERS-SKEW]**: Median violation much lower than mean (outliers skew average)
- **[SEVERE-TAIL]**: Some samples fail badly while most are moderate
"
`;

exports[`MonteCarloReportGenerator Snapshot Tests Edge Case Snapshots generates consistent output with empty blockers: empty-blockers-report 1`] = `
"# Monte Carlo Analysis Report

**Expression**: test:no_blockers_expression
**Generated**: [TIMESTAMP]
**Distribution**: uniform
**Sample Size**: 10000
**Sampling Mode**: static - Prototype-gated sampling (emotions derived from mood axes; not independent)
**Gating model**: HARD (gate fail => final = 0)
**Regime Note**: Report includes global vs in-regime (mood-pass) statistics



---

## Population Summary

- **Total samples**: 10,000 (in-regime 0; 0.00%)
- **Stored contexts**: 4 of 10,000 (in-regime 4; 100.00%; limit 4)
- **Mood regime**: Mood axis constraints derived from gates of emotion/sexual prototypes referenced in prerequisites.
> **Note**: Stored contexts are capped at 4, so sections labeled "Population: stored-*" may not match full-sample counts.


---

## Signal Lineage

- **Raw**: Weighted sum of normalized axes (clamped to 0..1).
- **Gated**: Raw value when gate constraints pass; otherwise 0.
- **Final**: Hard-gated output (final = gated).

**Gate input scales**
- Mood axes: raw [-100, 100] -> normalized [-1, 1]
- Sexual axes: raw [0, 100] -> normalized [0, 1] (sexual_arousal derived, clamped)
- Affect traits: raw [0, 100] -> normalized [0, 1]

---

## Executive Summary

**Trigger Rate**: 15.00% (95% CI: 14.00% - 16.00%)
**Rarity**: frequent

Expression with no blockers

---

## Sampling Coverage

**Sampling Mode**: static

### Summary by Domain

| Domain | Variables | Range Coverage | Bin Coverage | Tail Low | Tail High | Zero Rate Avg | Rating |
|--------|-----------|----------------|--------------|----------|-----------|---------------|--------|
| emotions | 3 | 75.00% | 70.00% | 5.00% | 4.00% | N/A | good |
| moodAxes | 3 | 80.00% | 75.00% | 6.00% | 5.00% | N/A | good |

### Lowest Coverage Variables

| Variable | Range Coverage | Bin Coverage | Tail Low | Tail High | Rating |
|----------|----------------|--------------|----------|-----------|--------|
| emotions.joy | 80.00% | 75.00% | 5.00% | 4.00% | good |
| emotions.fear | 70.00% | 65.00% | 4.00% | 3.00% | moderate |

Notes:
- Range coverage is observed span divided by domain span.
- Bin coverage is occupancy across 10 equal-width bins.
- Tail coverage is the share of samples in the bottom/top 10.00% of the domain.
- Variables with unknown domain ranges are excluded from summaries.

### Coverage Conclusions

- emotions: bin coverage is 70%, indicating clumping. Rates may be biased toward a few common regimes.
- emotions: observed range spans only 75% of the domain. This suggests ceilings/floors or gating; feasibility conclusions involving missing ranges are low-confidence.
- Across variables: 1 show truncated range. Those regions are effectively unvalidated by current sampling.
- Feasibility rates may be biased by overrepresented regimes; edge-case prerequisites may be incorrectly labeled rare/impossible.
- Worst range coverage: min=70%.
- Worst upper-tail coverage: min tailHigh=3.0000%.
- Worst lower-tail coverage: min tailLow=4.0000%.

---

## Ground-Truth Witnesses

No triggering states found during simulation.


---

## Blocker Analysis

No blockers identified.

---

## Non-Axis Clause Feasibility

> **[NON-AXIS ONLY]** **[IN-REGIME]**
> *Evaluates emotion/sexual/delta clauses within mood-regime using final values.*

No non-axis clauses found in prerequisites.

## Legend

### Global Metrics
- **Trigger Rate**: Probability (0-100%) that the expression evaluates to true across random samples
- **Confidence Interval**: 95% Wilson score interval indicating statistical certainty of the trigger rate
- **Sample Size**: Number of random state pairs generated for simulation
- **Rarity Categories**: impossible (0%), extremely_rare (<0.001%), rare (<0.05%), normal (<2%), frequent (>=2%)

### Per-Clause Metrics
- **Fail% global**: Percentage of samples where this specific clause evaluated to false (unconditional)
- **Fail% | mood-pass**: Percentage of samples where this clause evaluated to false within the mood regime
- **Gate pass (mood)**: Percentage of mood-regime samples where gates passed (emotion-threshold clauses only)
- **Gate clamp (mood)**: Percentage of mood-regime samples where gates failed and the final intensity was clamped to 0 (emotion-threshold clauses only)
- **Pass | gate (mood)**: Percentage of gate-pass samples that passed the threshold within the mood regime (emotion-threshold clauses only)
- **Pass | mood (mood)**: Percentage of mood-regime samples that passed the threshold (emotion-threshold clauses only)
- **Support**: Number of samples evaluated for this clause (evaluation count)
- **Clamp-trivial (regime)**: Clause is trivially satisfied because gates always clamp intensity to 0 in regime (<= or < thresholds only)
- **Violation Magnitude**: How far the actual value was from the threshold when the clause failed
- **P50 (Median)**: Middle value of violations; 50% of failures had violations at or below this
- **P90 (90th Percentile)**: 90% of failures had violations at or below this; indicates severity of worst cases
- **P95 (95th Percentile)**: 95% of failures had violations at or below this; shows extreme violations
- **P99 (99th Percentile)**: 99% of failures had violations at or below this; identifies outlier violations
- **Min Observed**: Lowest value observed for this variable across all samples
- **Mean Observed**: Average value observed for this variable across all samples
- **Near-Miss Rate**: Percentage of ALL samples where the value was within epsilon of the threshold (close calls)
- **Epsilon**: The tolerance distance used to detect near-misses (typically 5% of value range)
- **Sole-Blocker Rate (N)**: Failure rate among samples where ALL OTHER clauses passed. N differs per clause because each clause excludes itself from the "others" check: Clause A's N = samples where B,C,D... passed; Clause B's N = samples where A,C,D... passed. This variance is mathematically correct and order-invariant
- **Bound**: The relevant extreme value for verifying Gap. For \`>=\` operators: Max Observed (highest value seen). For \`<=\` operators: Min Observed (lowest value seen)
- **Ceiling Gap**: Direction-aware calculation. For \`>=\` operators: (Threshold - Max Observed). For \`<=\` operators: (Min Observed - Threshold). Positive = threshold unreachable; negative = threshold achievable

### Tunability Levels
- **High**: >10% near-miss rate; threshold adjustments will help significantly
- **Moderate**: 2-10% near-miss rate; threshold adjustments may help somewhat
- **Low**: <2% near-miss rate; threshold adjustments won't help; fix upstream

### Severity Levels
- **Critical**: Ceiling detected or fundamentally broken condition
- **High**: Decisive blocker with tuning potential
- **Medium**: Moderate contributor to failures
- **Low**: Other clauses fail first; lower priority

### Recommended Actions
- **redesign**: Condition is fundamentally problematic; rethink the logic
- **tune_threshold**: Adjust threshold value; quick win available
- **adjust_upstream**: Modify prototypes, gates, or weights that feed this variable
- **lower_priority**: Focus on other blockers first
- **investigate**: Needs further analysis

### Problem Flags
- **[CEILING]**: Threshold is unreachable (max observed never reaches threshold)
- **[DECISIVE]**: This clause is the primary bottleneck
- **[TUNABLE]**: Many samples are borderline; small adjustments help
- **[UPSTREAM]**: Values are far from threshold; fix upstream data
- **[OUTLIERS-SKEW]**: Median violation much lower than mean (outliers skew average)
- **[SEVERE-TAIL]**: Some samples fail badly while most are moderate
"
`;

exports[`MonteCarloReportGenerator Snapshot Tests Full Report Snapshots generates consistent output for high trigger rate scenario: high-trigger-rate-report 1`] = `
"# Monte Carlo Analysis Report

**Expression**: test:high_trigger_expression
**Generated**: [TIMESTAMP]
**Distribution**: uniform
**Sample Size**: 10000
**Sampling Mode**: static - Prototype-gated sampling (emotions derived from mood axes; not independent)
**Gating model**: HARD (gate fail => final = 0)
**Regime Note**: Report includes global vs in-regime (mood-pass) statistics



---

## Population Summary

- **Total samples**: 10,000 (in-regime 0; 0.00%)
- **Stored contexts**: 4 of 10,000 (in-regime 4; 100.00%; limit 4)
- **Mood regime**: Mood axis constraints derived from gates of emotion/sexual prototypes referenced in prerequisites.
> **Note**: Stored contexts are capped at 4, so sections labeled "Population: stored-*" may not match full-sample counts.


---

## Signal Lineage

- **Raw**: Weighted sum of normalized axes (clamped to 0..1).
- **Gated**: Raw value when gate constraints pass; otherwise 0.
- **Final**: Hard-gated output (final = gated).

**Gate input scales**
- Mood axes: raw [-100, 100] -> normalized [-1, 1]
- Sexual axes: raw [0, 100] -> normalized [0, 1] (sexual_arousal derived, clamped)
- Affect traits: raw [0, 100] -> normalized [0, 1]

---

## Executive Summary

**Trigger Rate**: 95.00% (95% CI: 94.00% - 96.00%)
**Rarity**: frequent

High trigger rate with no blockers

---

## Ground-Truth Witnesses

No triggering states found during simulation.


---

## Blocker Analysis

No blockers identified.

---

## Non-Axis Clause Feasibility

> **[NON-AXIS ONLY]** **[IN-REGIME]**
> *Evaluates emotion/sexual/delta clauses within mood-regime using final values.*

No non-axis clauses found in prerequisites.

## Legend

### Global Metrics
- **Trigger Rate**: Probability (0-100%) that the expression evaluates to true across random samples
- **Confidence Interval**: 95% Wilson score interval indicating statistical certainty of the trigger rate
- **Sample Size**: Number of random state pairs generated for simulation
- **Rarity Categories**: impossible (0%), extremely_rare (<0.001%), rare (<0.05%), normal (<2%), frequent (>=2%)

### Per-Clause Metrics
- **Fail% global**: Percentage of samples where this specific clause evaluated to false (unconditional)
- **Fail% | mood-pass**: Percentage of samples where this clause evaluated to false within the mood regime
- **Gate pass (mood)**: Percentage of mood-regime samples where gates passed (emotion-threshold clauses only)
- **Gate clamp (mood)**: Percentage of mood-regime samples where gates failed and the final intensity was clamped to 0 (emotion-threshold clauses only)
- **Pass | gate (mood)**: Percentage of gate-pass samples that passed the threshold within the mood regime (emotion-threshold clauses only)
- **Pass | mood (mood)**: Percentage of mood-regime samples that passed the threshold (emotion-threshold clauses only)
- **Support**: Number of samples evaluated for this clause (evaluation count)
- **Clamp-trivial (regime)**: Clause is trivially satisfied because gates always clamp intensity to 0 in regime (<= or < thresholds only)
- **Violation Magnitude**: How far the actual value was from the threshold when the clause failed
- **P50 (Median)**: Middle value of violations; 50% of failures had violations at or below this
- **P90 (90th Percentile)**: 90% of failures had violations at or below this; indicates severity of worst cases
- **P95 (95th Percentile)**: 95% of failures had violations at or below this; shows extreme violations
- **P99 (99th Percentile)**: 99% of failures had violations at or below this; identifies outlier violations
- **Min Observed**: Lowest value observed for this variable across all samples
- **Mean Observed**: Average value observed for this variable across all samples
- **Near-Miss Rate**: Percentage of ALL samples where the value was within epsilon of the threshold (close calls)
- **Epsilon**: The tolerance distance used to detect near-misses (typically 5% of value range)
- **Sole-Blocker Rate (N)**: Failure rate among samples where ALL OTHER clauses passed. N differs per clause because each clause excludes itself from the "others" check: Clause A's N = samples where B,C,D... passed; Clause B's N = samples where A,C,D... passed. This variance is mathematically correct and order-invariant
- **Bound**: The relevant extreme value for verifying Gap. For \`>=\` operators: Max Observed (highest value seen). For \`<=\` operators: Min Observed (lowest value seen)
- **Ceiling Gap**: Direction-aware calculation. For \`>=\` operators: (Threshold - Max Observed). For \`<=\` operators: (Min Observed - Threshold). Positive = threshold unreachable; negative = threshold achievable

### Tunability Levels
- **High**: >10% near-miss rate; threshold adjustments will help significantly
- **Moderate**: 2-10% near-miss rate; threshold adjustments may help somewhat
- **Low**: <2% near-miss rate; threshold adjustments won't help; fix upstream

### Severity Levels
- **Critical**: Ceiling detected or fundamentally broken condition
- **High**: Decisive blocker with tuning potential
- **Medium**: Moderate contributor to failures
- **Low**: Other clauses fail first; lower priority

### Recommended Actions
- **redesign**: Condition is fundamentally problematic; rethink the logic
- **tune_threshold**: Adjust threshold value; quick win available
- **adjust_upstream**: Modify prototypes, gates, or weights that feed this variable
- **lower_priority**: Focus on other blockers first
- **investigate**: Needs further analysis

### Problem Flags
- **[CEILING]**: Threshold is unreachable (max observed never reaches threshold)
- **[DECISIVE]**: This clause is the primary bottleneck
- **[TUNABLE]**: Many samples are borderline; small adjustments help
- **[UPSTREAM]**: Values are far from threshold; fix upstream data
- **[OUTLIERS-SKEW]**: Median violation much lower than mean (outliers skew average)
- **[SEVERE-TAIL]**: Some samples fail badly while most are moderate
"
`;

exports[`MonteCarloReportGenerator Snapshot Tests Full Report Snapshots generates consistent output for standard simulation: standard-simulation-full-report 1`] = `
"# Monte Carlo Analysis Report

**Expression**: test:snapshot_expression
**Generated**: [TIMESTAMP]
**Distribution**: uniform
**Sample Size**: 10000
**Sampling Mode**: static - Prototype-gated sampling (emotions derived from mood axes; not independent)
**Gating model**: HARD (gate fail => final = 0)
**Regime Note**: Report includes global vs in-regime (mood-pass) statistics



---

## Population Summary

- **Total samples**: 10,000 (in-regime 0; 0.00%)
- **Stored contexts**: 4 of 10,000 (in-regime 4; 100.00%; limit 4)
- **Mood regime**: Mood axis constraints derived from gates of emotion/sexual prototypes referenced in prerequisites.
> **Note**: Stored contexts are capped at 4, so sections labeled "Population: stored-*" may not match full-sample counts.


---

## Signal Lineage

- **Raw**: Weighted sum of normalized axes (clamped to 0..1).
- **Gated**: Raw value when gate constraints pass; otherwise 0.
- **Final**: Hard-gated output (final = gated).

**Gate input scales**
- Mood axes: raw [-100, 100] -> normalized [-1, 1]
- Sexual axes: raw [0, 100] -> normalized [0, 1] (sexual_arousal derived, clamped)
- Affect traits: raw [0, 100] -> normalized [0, 1]

---

## Executive Summary

**Trigger Rate**: 15.00% (95% CI: 14.00% - 16.00%)
**Rarity**: frequent

Snapshot test summary for refactoring safety

---

## Independence Baseline Comparison

This section compares Monte Carlo results against naive probability estimates (assuming clause independence) to identify correlation effects. Deviations indicate clauses are not statistically independent.

| Metric | Value |
|--------|-------|
| Naive probability (product of pass rates) | 100.00% |
| Expected hits per 10,000 samples | 10000.00 |
| Actual hits | 1500 |
| P(0 hits \\| expected=10000.00) | 0 |

### Interpretation

✅ **Normal**: Actual hits (1500) align with expected (10000.0).

### Clause Pass Rate Factors

| Clause | Pass Rate (in-regime) |
|--------|------------------------|
| emotions.joy | 100.00% |
| emotions.fear | 100.00% |
| emotions.joy | 100.00% |
| emotions.curiosity | 100.00% |

---

## Sampling Coverage

**Sampling Mode**: static

### Summary by Domain

| Domain | Variables | Range Coverage | Bin Coverage | Tail Low | Tail High | Zero Rate Avg | Rating |
|--------|-----------|----------------|--------------|----------|-----------|---------------|--------|
| emotions | 3 | 75.00% | 70.00% | 5.00% | 4.00% | N/A | good |
| moodAxes | 3 | 80.00% | 75.00% | 6.00% | 5.00% | N/A | good |

### Lowest Coverage Variables

| Variable | Range Coverage | Bin Coverage | Tail Low | Tail High | Rating |
|----------|----------------|--------------|----------|-----------|--------|
| emotions.joy | 80.00% | 75.00% | 5.00% | 4.00% | good |
| emotions.fear | 70.00% | 65.00% | 4.00% | 3.00% | moderate |

Notes:
- Range coverage is observed span divided by domain span.
- Bin coverage is occupancy across 10 equal-width bins.
- Tail coverage is the share of samples in the bottom/top 10.00% of the domain.
- Variables with unknown domain ranges are excluded from summaries.

### Coverage Conclusions

- emotions: bin coverage is 70%, indicating clumping. Rates may be biased toward a few common regimes.
- emotions: observed range spans only 75% of the domain. This suggests ceilings/floors or gating; feasibility conclusions involving missing ranges are low-confidence.
- Across variables: 1 show truncated range. Those regions are effectively unvalidated by current sampling.
- Feasibility rates may be biased by overrepresented regimes; edge-case prerequisites may be incorrectly labeled rare/impossible.
- Worst range coverage: min=70%.
- Worst upper-tail coverage: min tailHigh=3.0000%.
- Worst lower-tail coverage: min tailLow=4.0000%.

---

## Ground-Truth Witnesses

No triggering states found during simulation.


---

## Blocker Analysis
Signal: final (gate-clamped intensity).
> **[FULL PREREQS]** **[GLOBAL]**
> *Computed from ALL prerequisites using post-gate (final) values.*

### Probability Funnel
- **Full sample**: 10,000
- **Mood-regime pass**: N/A
- **Prototype gate pass**: N/A
- **Threshold pass | gate**: N/A
- **OR union pass | mood-pass**: N/A
- **Final trigger**: 15.00% (1500 / 10000)

### Blocker #1: \`emotions.joy >= 0.5\`


**Condition**: \`emotions.joy >= 0.5\`
**Fail% global**: 75.00% (7500 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: high
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
None







#### Distribution Analysis
- **Average Violation**: 0.30
- **Median (P50)**: 0.20
- **90th Percentile (P90)**: 0.40
- **Interpretation**: Normal distribution of values

#### Ceiling Analysis
- **Max Observed**: 0.60
- **Threshold**: 0.50
- **Ceiling Gap**: -0.10 (achievable)
- **Insight**: Threshold is reachable

#### Near-Miss Analysis
- **Near-Miss Rate**: 8.00% (epsilon: 0.05)
- **Tunability**: moderate
- **Insight**: Some near misses detected

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 30.00%
- **Others Passed Count**: 5000
- **Is Decisive**: no
- **Insight**: Not a decisive blocker

#### Recommendation
**Action**: tune_threshold
**Priority**: medium
**Guidance**: Consider adjusting threshold

---

### Blocker #2: \`emotions.fear <= 0.3\`


**Condition**: \`emotions.fear <= 0.3\`
**Fail% global**: 40.00% (4000 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: medium
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
[DECISIVE]







#### Distribution Analysis
- **Average Violation**: 0.15
- **Median (P50)**: 0.15
- **90th Percentile (P90)**: 0.25
- **Interpretation**: Values skewed toward upper range

#### Ceiling Analysis
- **Min Observed**: N/A
- **Threshold**: 0.30
- **Ceiling Gap**: 0.05 (UNREACHABLE)
- **Insight**: Ceiling is challenging

#### Near-Miss Analysis
- **Near-Miss Rate**: 3.00% (epsilon: 0.05)
- **Tunability**: low
- **Insight**: Few near misses

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 60.00%
- **Others Passed Count**: 8000
- **Is Decisive**: yes
- **Insight**: This is a decisive blocker

#### Recommendation
**Action**: accept_limitation
**Priority**: low
**Guidance**: May need alternative approach

---

### Blocker #3: \`(emotions.joy >= 0.5 OR emotions.curiosity >= 0.4)\`


**Condition**: \`unknown ? N/A\`
**Fail% global**: 25.00% (2500 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: low
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
None







#### Distribution Analysis
- **Average Violation**: 0.10
- **Median (P50)**: 0.00
- **90th Percentile (P90)**: 0.00
- **Interpretation**: Normal distribution

#### Ceiling Analysis
- **Max Observed**: 0.65
- **Threshold**: N/A
- **Ceiling Gap**: 0.00 (achievable)
- **Insight**: Easily achievable

#### Near-Miss Analysis
- **Near-Miss Rate**: 0.00% (epsilon: 0.00)
- **Tunability**: high
- **Insight**: Many near misses

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 0.00%
- **Others Passed Count**: 0
- **Is Decisive**: no
- **Insight**: Not decisive

#### Recommendation
**Action**: tune_threshold
**Priority**: high
**Guidance**: Small adjustment could help

---


> **Note on Sole-Blocker N values**: Each clause's N represents samples where all *other* clauses passed (excluding itself). Different clauses have different "others" sets, so N naturally varies. This is correct behavior indicating which clause is the decisive blocker when others succeed.

## Non-Axis Clause Feasibility

> **[NON-AXIS ONLY]** **[IN-REGIME]**
> *Evaluates emotion/sexual/delta clauses within mood-regime using final values.*

No non-axis clauses found in prerequisites.

## Legend

### Global Metrics
- **Trigger Rate**: Probability (0-100%) that the expression evaluates to true across random samples
- **Confidence Interval**: 95% Wilson score interval indicating statistical certainty of the trigger rate
- **Sample Size**: Number of random state pairs generated for simulation
- **Rarity Categories**: impossible (0%), extremely_rare (<0.001%), rare (<0.05%), normal (<2%), frequent (>=2%)

### Per-Clause Metrics
- **Fail% global**: Percentage of samples where this specific clause evaluated to false (unconditional)
- **Fail% | mood-pass**: Percentage of samples where this clause evaluated to false within the mood regime
- **Gate pass (mood)**: Percentage of mood-regime samples where gates passed (emotion-threshold clauses only)
- **Gate clamp (mood)**: Percentage of mood-regime samples where gates failed and the final intensity was clamped to 0 (emotion-threshold clauses only)
- **Pass | gate (mood)**: Percentage of gate-pass samples that passed the threshold within the mood regime (emotion-threshold clauses only)
- **Pass | mood (mood)**: Percentage of mood-regime samples that passed the threshold (emotion-threshold clauses only)
- **Support**: Number of samples evaluated for this clause (evaluation count)
- **Clamp-trivial (regime)**: Clause is trivially satisfied because gates always clamp intensity to 0 in regime (<= or < thresholds only)
- **Violation Magnitude**: How far the actual value was from the threshold when the clause failed
- **P50 (Median)**: Middle value of violations; 50% of failures had violations at or below this
- **P90 (90th Percentile)**: 90% of failures had violations at or below this; indicates severity of worst cases
- **P95 (95th Percentile)**: 95% of failures had violations at or below this; shows extreme violations
- **P99 (99th Percentile)**: 99% of failures had violations at or below this; identifies outlier violations
- **Min Observed**: Lowest value observed for this variable across all samples
- **Mean Observed**: Average value observed for this variable across all samples
- **Near-Miss Rate**: Percentage of ALL samples where the value was within epsilon of the threshold (close calls)
- **Epsilon**: The tolerance distance used to detect near-misses (typically 5% of value range)
- **Sole-Blocker Rate (N)**: Failure rate among samples where ALL OTHER clauses passed. N differs per clause because each clause excludes itself from the "others" check: Clause A's N = samples where B,C,D... passed; Clause B's N = samples where A,C,D... passed. This variance is mathematically correct and order-invariant
- **Bound**: The relevant extreme value for verifying Gap. For \`>=\` operators: Max Observed (highest value seen). For \`<=\` operators: Min Observed (lowest value seen)
- **Ceiling Gap**: Direction-aware calculation. For \`>=\` operators: (Threshold - Max Observed). For \`<=\` operators: (Min Observed - Threshold). Positive = threshold unreachable; negative = threshold achievable

### Tunability Levels
- **High**: >10% near-miss rate; threshold adjustments will help significantly
- **Moderate**: 2-10% near-miss rate; threshold adjustments may help somewhat
- **Low**: <2% near-miss rate; threshold adjustments won't help; fix upstream

### Severity Levels
- **Critical**: Ceiling detected or fundamentally broken condition
- **High**: Decisive blocker with tuning potential
- **Medium**: Moderate contributor to failures
- **Low**: Other clauses fail first; lower priority

### Recommended Actions
- **redesign**: Condition is fundamentally problematic; rethink the logic
- **tune_threshold**: Adjust threshold value; quick win available
- **adjust_upstream**: Modify prototypes, gates, or weights that feed this variable
- **lower_priority**: Focus on other blockers first
- **investigate**: Needs further analysis

### Problem Flags
- **[CEILING]**: Threshold is unreachable (max observed never reaches threshold)
- **[DECISIVE]**: This clause is the primary bottleneck
- **[TUNABLE]**: Many samples are borderline; small adjustments help
- **[UPSTREAM]**: Values are far from threshold; fix upstream data
- **[OUTLIERS-SKEW]**: Median violation much lower than mean (outliers skew average)
- **[SEVERE-TAIL]**: Some samples fail badly while most are moderate
"
`;

exports[`MonteCarloReportGenerator Snapshot Tests Full Report Snapshots generates consistent output for zero trigger rate scenario: zero-trigger-rate-report 1`] = `
"# Monte Carlo Analysis Report

**Expression**: test:zero_trigger_expression
**Generated**: [TIMESTAMP]
**Distribution**: uniform
**Sample Size**: 10000
**Sampling Mode**: static - Prototype-gated sampling (emotions derived from mood axes; not independent)
**Gating model**: HARD (gate fail => final = 0)
**Regime Note**: Report includes global vs in-regime (mood-pass) statistics



---

## Population Summary

- **Total samples**: 10,000 (in-regime 0; 0.00%)
- **Stored contexts**: 0 of 10,000 (in-regime 0; 0.00%; limit 0)
- **Mood regime**: Mood axis constraints derived from gates of emotion/sexual prototypes referenced in prerequisites.

---

## Signal Lineage

- **Raw**: Weighted sum of normalized axes (clamped to 0..1).
- **Gated**: Raw value when gate constraints pass; otherwise 0.
- **Final**: Hard-gated output (final = gated).

**Gate input scales**
- Mood axes: raw [-100, 100] -> normalized [-1, 1]
- Sexual axes: raw [0, 100] -> normalized [0, 1] (sexual_arousal derived, clamped)
- Affect traits: raw [0, 100] -> normalized [0, 1]

---

## Executive Summary

**Trigger Rate**: 0.00% (95% CI: 0.00% - 0.03%)
**Rarity**: unobserved (not triggered in 10000 samples—trigger rate is below 0.03% upper bound, not logically impossible)

Zero trigger rate scenario

---

## Independence Baseline Comparison

This section compares Monte Carlo results against naive probability estimates (assuming clause independence) to identify correlation effects. Deviations indicate clauses are not statistically independent.

| Metric | Value |
|--------|-------|
| Naive probability (product of pass rates) | 100.00% |
| Expected hits per 10,000 samples | 10000.00 |
| Actual hits | 0 |
| P(0 hits \\| expected=10000.00) | 0 |

### Interpretation

⚠️ **Unexpected Zero**: Zero hits is surprising (p=0). Clause correlations may amplify blocking effects.

### Clause Pass Rate Factors

| Clause | Pass Rate (in-regime) |
|--------|------------------------|
| emotions.joy | 100.00% |
| emotions.fear | 100.00% |
| emotions.joy | 100.00% |
| emotions.curiosity | 100.00% |

---

## Ground-Truth Witnesses

No triggering states found during simulation.


---

## Blocker Analysis
Signal: final (gate-clamped intensity).
> **[FULL PREREQS]** **[GLOBAL]**
> *Computed from ALL prerequisites using post-gate (final) values.*

### Probability Funnel
- **Full sample**: 10,000
- **Mood-regime pass**: N/A
- **Prototype gate pass**: N/A
- **Threshold pass | gate**: N/A
- **OR union pass | mood-pass**: N/A
- **Final trigger**: 0.00% (0 / 10000)

### Blocker #1: \`emotions.joy >= 0.5\`


**Condition**: \`emotions.joy >= 0.5\`
**Fail% global**: 75.00% (7500 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: high
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
None







#### Distribution Analysis
- **Average Violation**: 0.30
- **Median (P50)**: 0.20
- **90th Percentile (P90)**: 0.40
- **Interpretation**: Normal distribution of values

#### Ceiling Analysis
- **Max Observed**: 0.60
- **Threshold**: 0.50
- **Ceiling Gap**: -0.10 (achievable)
- **Insight**: Threshold is reachable

#### Near-Miss Analysis
- **Near-Miss Rate**: 8.00% (epsilon: 0.05)
- **Tunability**: moderate
- **Insight**: Some near misses detected

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 30.00%
- **Others Passed Count**: 5000
- **Is Decisive**: no
- **Insight**: Not a decisive blocker

#### Recommendation
**Action**: tune_threshold
**Priority**: medium
**Guidance**: Consider adjusting threshold

---

### Blocker #2: \`emotions.fear <= 0.3\`


**Condition**: \`emotions.fear <= 0.3\`
**Fail% global**: 40.00% (4000 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: medium
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
[DECISIVE]







#### Distribution Analysis
- **Average Violation**: 0.15
- **Median (P50)**: 0.15
- **90th Percentile (P90)**: 0.25
- **Interpretation**: Values skewed toward upper range

#### Ceiling Analysis
- **Min Observed**: N/A
- **Threshold**: 0.30
- **Ceiling Gap**: 0.05 (UNREACHABLE)
- **Insight**: Ceiling is challenging

#### Near-Miss Analysis
- **Near-Miss Rate**: 3.00% (epsilon: 0.05)
- **Tunability**: low
- **Insight**: Few near misses

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 60.00%
- **Others Passed Count**: 8000
- **Is Decisive**: yes
- **Insight**: This is a decisive blocker

#### Recommendation
**Action**: accept_limitation
**Priority**: low
**Guidance**: May need alternative approach

---

### Blocker #3: \`(emotions.joy >= 0.5 OR emotions.curiosity >= 0.4)\`


**Condition**: \`unknown ? N/A\`
**Fail% global**: 25.00% (2500 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: low
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
None







#### Distribution Analysis
- **Average Violation**: 0.10
- **Median (P50)**: 0.00
- **90th Percentile (P90)**: 0.00
- **Interpretation**: Normal distribution

#### Ceiling Analysis
- **Max Observed**: 0.65
- **Threshold**: N/A
- **Ceiling Gap**: 0.00 (achievable)
- **Insight**: Easily achievable

#### Near-Miss Analysis
- **Near-Miss Rate**: 0.00% (epsilon: 0.00)
- **Tunability**: high
- **Insight**: Many near misses

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 0.00%
- **Others Passed Count**: 0
- **Is Decisive**: no
- **Insight**: Not decisive

#### Recommendation
**Action**: tune_threshold
**Priority**: high
**Guidance**: Small adjustment could help

---


> **Note on Sole-Blocker N values**: Each clause's N represents samples where all *other* clauses passed (excluding itself). Different clauses have different "others" sets, so N naturally varies. This is correct behavior indicating which clause is the decisive blocker when others succeed.

## Non-Axis Clause Feasibility

> **[NON-AXIS ONLY]** **[IN-REGIME]**
> *Evaluates emotion/sexual/delta clauses within mood-regime using final values.*

No non-axis clauses found in prerequisites.

## Legend

### Global Metrics
- **Trigger Rate**: Probability (0-100%) that the expression evaluates to true across random samples
- **Confidence Interval**: 95% Wilson score interval indicating statistical certainty of the trigger rate
- **Sample Size**: Number of random state pairs generated for simulation
- **Rarity Categories**: impossible (0%), extremely_rare (<0.001%), rare (<0.05%), normal (<2%), frequent (>=2%)

### Per-Clause Metrics
- **Fail% global**: Percentage of samples where this specific clause evaluated to false (unconditional)
- **Fail% | mood-pass**: Percentage of samples where this clause evaluated to false within the mood regime
- **Gate pass (mood)**: Percentage of mood-regime samples where gates passed (emotion-threshold clauses only)
- **Gate clamp (mood)**: Percentage of mood-regime samples where gates failed and the final intensity was clamped to 0 (emotion-threshold clauses only)
- **Pass | gate (mood)**: Percentage of gate-pass samples that passed the threshold within the mood regime (emotion-threshold clauses only)
- **Pass | mood (mood)**: Percentage of mood-regime samples that passed the threshold (emotion-threshold clauses only)
- **Support**: Number of samples evaluated for this clause (evaluation count)
- **Clamp-trivial (regime)**: Clause is trivially satisfied because gates always clamp intensity to 0 in regime (<= or < thresholds only)
- **Violation Magnitude**: How far the actual value was from the threshold when the clause failed
- **P50 (Median)**: Middle value of violations; 50% of failures had violations at or below this
- **P90 (90th Percentile)**: 90% of failures had violations at or below this; indicates severity of worst cases
- **P95 (95th Percentile)**: 95% of failures had violations at or below this; shows extreme violations
- **P99 (99th Percentile)**: 99% of failures had violations at or below this; identifies outlier violations
- **Min Observed**: Lowest value observed for this variable across all samples
- **Mean Observed**: Average value observed for this variable across all samples
- **Near-Miss Rate**: Percentage of ALL samples where the value was within epsilon of the threshold (close calls)
- **Epsilon**: The tolerance distance used to detect near-misses (typically 5% of value range)
- **Sole-Blocker Rate (N)**: Failure rate among samples where ALL OTHER clauses passed. N differs per clause because each clause excludes itself from the "others" check: Clause A's N = samples where B,C,D... passed; Clause B's N = samples where A,C,D... passed. This variance is mathematically correct and order-invariant
- **Bound**: The relevant extreme value for verifying Gap. For \`>=\` operators: Max Observed (highest value seen). For \`<=\` operators: Min Observed (lowest value seen)
- **Ceiling Gap**: Direction-aware calculation. For \`>=\` operators: (Threshold - Max Observed). For \`<=\` operators: (Min Observed - Threshold). Positive = threshold unreachable; negative = threshold achievable

### Tunability Levels
- **High**: >10% near-miss rate; threshold adjustments will help significantly
- **Moderate**: 2-10% near-miss rate; threshold adjustments may help somewhat
- **Low**: <2% near-miss rate; threshold adjustments won't help; fix upstream

### Severity Levels
- **Critical**: Ceiling detected or fundamentally broken condition
- **High**: Decisive blocker with tuning potential
- **Medium**: Moderate contributor to failures
- **Low**: Other clauses fail first; lower priority

### Recommended Actions
- **redesign**: Condition is fundamentally problematic; rethink the logic
- **tune_threshold**: Adjust threshold value; quick win available
- **adjust_upstream**: Modify prototypes, gates, or weights that feed this variable
- **lower_priority**: Focus on other blockers first
- **investigate**: Needs further analysis

### Problem Flags
- **[CEILING]**: Threshold is unreachable (max observed never reaches threshold)
- **[DECISIVE]**: This clause is the primary bottleneck
- **[TUNABLE]**: Many samples are borderline; small adjustments help
- **[UPSTREAM]**: Values are far from threshold; fix upstream data
- **[OUTLIERS-SKEW]**: Median violation much lower than mean (outliers skew average)
- **[SEVERE-TAIL]**: Some samples fail badly while most are moderate
"
`;

exports[`MonteCarloReportGenerator Snapshot Tests Full Report Snapshots generates consistent output with prototype fit analysis: prototype-fit-full-report 1`] = `
"# Monte Carlo Analysis Report

**Expression**: test:prototype_snapshot_expression
**Generated**: [TIMESTAMP]
**Distribution**: uniform
**Sample Size**: 10000
**Sampling Mode**: static - Prototype-gated sampling (emotions derived from mood axes; not independent)
**Gating model**: HARD (gate fail => final = 0)
**Regime Note**: Report includes global vs in-regime (mood-pass) statistics



---

## Population Summary

- **Total samples**: 10,000 (in-regime 0; 0.00%)
- **Stored contexts**: 4 of 10,000 (in-regime 4; 100.00%; limit 4)
- **Mood regime**: Mood axis constraints derived from gates of emotion/sexual prototypes referenced in prerequisites.
> **Note**: Stored contexts are capped at 4, so sections labeled "Population: stored-*" may not match full-sample counts.


---

## Integrity Summary

- **Integrity warnings**: 10
- **Gate/final mismatches**: 10
- **Gate-dependent metrics**: UNRELIABLE
- **Affected prototypes**: joy, fear
- **Example indices**: 0, 1, 2, 3
> **Note**: Gate-dependent metrics (pass rates, blocker stats) are unreliable while mismatches exist.

---

## Signal Lineage

- **Raw**: Weighted sum of normalized axes (clamped to 0..1).
- **Gated**: Raw value when gate constraints pass; otherwise 0.
- **Final**: Hard-gated output (final = gated).

**Gate input scales**
- Mood axes: raw [-100, 100] -> normalized [-1, 1]
- Sexual axes: raw [0, 100] -> normalized [0, 1] (sexual_arousal derived, clamped)
- Affect traits: raw [0, 100] -> normalized [0, 1]

---

## Executive Summary

**Trigger Rate**: 15.00% (95% CI: 14.00% - 16.00%)
**Rarity**: frequent

Prototype fit snapshot test

---

## Independence Baseline Comparison

This section compares Monte Carlo results against naive probability estimates (assuming clause independence) to identify correlation effects. Deviations indicate clauses are not statistically independent.

| Metric | Value |
|--------|-------|
| Naive probability (product of pass rates) | 100.00% |
| Expected hits per 10,000 samples | 10000.00 |
| Actual hits | 1500 |
| P(0 hits \\| expected=10000.00) | 0 |

### Interpretation

✅ **Normal**: Actual hits (1500) align with expected (10000.0).

### Clause Pass Rate Factors

| Clause | Pass Rate (in-regime) |
|--------|------------------------|
| emotions.joy | 100.00% |
| emotions.fear | 100.00% |
| emotions.joy | 100.00% |
| emotions.curiosity | 100.00% |

---

## Sampling Coverage

**Sampling Mode**: static

### Summary by Domain

| Domain | Variables | Range Coverage | Bin Coverage | Tail Low | Tail High | Zero Rate Avg | Rating |
|--------|-----------|----------------|--------------|----------|-----------|---------------|--------|
| emotions | 3 | 75.00% | 70.00% | 5.00% | 4.00% | N/A | good |
| moodAxes | 3 | 80.00% | 75.00% | 6.00% | 5.00% | N/A | good |

### Lowest Coverage Variables

| Variable | Range Coverage | Bin Coverage | Tail Low | Tail High | Rating |
|----------|----------------|--------------|----------|-----------|--------|
| emotions.joy | 80.00% | 75.00% | 5.00% | 4.00% | good |
| emotions.fear | 70.00% | 65.00% | 4.00% | 3.00% | moderate |

Notes:
- Range coverage is observed span divided by domain span.
- Bin coverage is occupancy across 10 equal-width bins.
- Tail coverage is the share of samples in the bottom/top 10.00% of the domain.
- Variables with unknown domain ranges are excluded from summaries.

### Coverage Conclusions

- emotions: bin coverage is 70%, indicating clumping. Rates may be biased toward a few common regimes.
- emotions: observed range spans only 75% of the domain. This suggests ceilings/floors or gating; feasibility conclusions involving missing ranges are low-confidence.
- Across variables: 1 show truncated range. Those regions are effectively unvalidated by current sampling.
- Feasibility rates may be biased by overrepresented regimes; edge-case prerequisites may be incorrectly labeled rare/impossible.
- Worst range coverage: min=70%.
- Worst upper-tail coverage: min tailHigh=3.0000%.
- Worst lower-tail coverage: min tailLow=4.0000%.

---

## Ground-Truth Witnesses

No triggering states found during simulation.


---

## Blocker Analysis
Signal: final (gate-clamped intensity).
> **[FULL PREREQS]** **[GLOBAL]**
> *Computed from ALL prerequisites using post-gate (final) values.*

### Probability Funnel
- **Full sample**: 10,000
- **Mood-regime pass**: N/A
- **Prototype gate pass**: N/A
- **Threshold pass | gate**: N/A
- **OR union pass | mood-pass**: N/A
- **Final trigger**: 15.00% (1500 / 10000)

### Blocker #1: \`emotions.joy >= 0.5\`


**Condition**: \`emotions.joy >= 0.5\`
**Fail% global**: 75.00% (7500 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: high
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
None





#### Prototype Math Analysis

**Population**: full (N=4; predicate: all; hash: c48b20d4).
##### 🧠 joy >= 0.50 ⚠️ SOMETIMES

**Feasibility (gated)**
- **Theoretical range (mood constraints, AND-only)**: [0.00, 1.00]
- **Threshold**: 0.50
- **Status**: sometimes
- **Slack**: feasibility +0.500; always -0.500
- **Tuning direction**: loosen -> threshold down, tighten -> threshold up
**Sum|Weights|**: 1.60 | **Required Raw Sum**: 0.80

**Regime Stats**:
| Regime | Signal | P50 | P90 | P95 | Min | Max | Gate Pass |
|--------|--------|-----|-----|-----|-----|-----|----------|
| Global | final | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00% |
| Global | raw | 0.01 | 0.01 | 0.01 | 0.00 | 0.01 | N/A |
| In mood regime | final | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00% |
| In mood regime | raw | 0.01 | 0.01 | 0.01 | 0.01 | 0.01 | N/A |
- **Observed max (global, final)**: 0.00
- **Observed max (mood-regime, final)**: 0.00

**Gate Compatibility (mood regime)**: N/A

**Prototype Weights**:
| Axis | Weight | Constraint | Optimal | Contribution | Binding |
|------|--------|------------|---------|--------------|---------|
| valence | +1.00 | [0.40, 1.00] | 1.00 | 1.000 | — |
| arousal | +0.60 | [0.30, 1.00] | 1.00 | 0.600 | — |

**Gates** ✅:
- ✅ \`valence >= 0.3\` - Satisfiable | **Observed Fail Rate**: 100.00%

**Binding Axes**: None (all axes can reach optimal values)

**Analysis**: Threshold 0.5 is achievable (max: 1.000)



#### Distribution Analysis
- **Average Violation**: 0.30
- **Median (P50)**: 0.20
- **90th Percentile (P90)**: 0.40
- **Interpretation**: Normal distribution of values

#### Ceiling Analysis
- **Max Observed**: 0.60
- **Threshold**: 0.50
- **Ceiling Gap**: -0.10 (achievable)
- **Insight**: Threshold is reachable

#### Near-Miss Analysis
- **Near-Miss Rate**: 8.00% (epsilon: 0.05)
- **Tunability**: moderate
- **Insight**: Some near misses detected

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 30.00%
- **Others Passed Count**: 5000
- **Is Decisive**: no
- **Insight**: Not a decisive blocker

#### Recommendation
**Action**: tune_threshold
**Priority**: medium
**Guidance**: Consider adjusting threshold

---

### Blocker #2: \`emotions.fear <= 0.3\`


**Condition**: \`emotions.fear <= 0.3\`
**Fail% global**: 40.00% (4000 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: medium
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
[DECISIVE]





#### Prototype Math Analysis

**Population**: full (N=4; predicate: all; hash: c48b20d4).
##### 🧠 fear <= 0.30 ⚠️ SOMETIMES

**Feasibility (gated)**
- **Theoretical range (mood constraints, AND-only)**: [0.00, 0.38]
- **Threshold**: 0.30
- **Status**: sometimes
- **Slack**: feasibility +0.300; always -0.083
- **Tuning direction**: loosen -> threshold up, tighten -> threshold down
**Sum|Weights|**: 2.40 | **Required Raw Sum**: 0.72

**Regime Stats**:
| Regime | Signal | P50 | P90 | P95 | Min | Max | Gate Pass |
|--------|--------|-----|-----|-----|-----|-----|----------|
| Global | final | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00% |
| Global | raw | 0.00 | 0.01 | 0.01 | 0.00 | 0.01 | N/A |
| In mood regime | final | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00% |
| In mood regime | raw | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | N/A |
- **Observed max (global, final)**: 0.00
- **Observed max (mood-regime, final)**: 0.00

**Gate Compatibility (mood regime)**: N/A

**Prototype Weights**:
| Axis | Weight | Constraint | Optimal | Contribution | Binding |
|------|--------|------------|---------|--------------|---------|
| valence | -0.80 | [0.40, 1.00] | 0.40 | -0.320 | ⚠️ negative_weight_high_min |
| arousal | +0.70 | [0.30, 1.00] | 1.00 | 0.700 | — |
| threat | +0.90 | [-1.00, 0.60] | 0.60 | 0.540 | ⚠️ positive_weight_low_max |

**Gates** ✅:
- ✅ \`threat >= 0.2\` - Satisfiable | **Observed Fail Rate**: 100.00%

**Binding Axes (Structural Conflicts)**:
- ⚠️ **valence**: Has negative weight (-0.80) but constraint requires min 0.40
- ⚠️ **threat**: Has positive weight (+0.90) but constraint limits max to 0.60

**Analysis**: Threshold 0.3 is achievable (min: 0.000). Binding conflicts: valence has negative weight (-0.80) but constraint requires min=0.40; threat has positive weight (+0.90) but constraint limits it to max=0.60

**Recommendation**: Threshold can be violated; consider raising threshold or adjusting prototypes to reduce peaks.

#### Distribution Analysis
- **Average Violation**: 0.15
- **Median (P50)**: 0.15
- **90th Percentile (P90)**: 0.25
- **Interpretation**: Values skewed toward upper range

#### Ceiling Analysis
- **Min Observed**: N/A
- **Threshold**: 0.30
- **Ceiling Gap**: 0.05 (UNREACHABLE)
- **Insight**: Ceiling is challenging

#### Near-Miss Analysis
- **Near-Miss Rate**: 3.00% (epsilon: 0.05)
- **Tunability**: low
- **Insight**: Few near misses

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 60.00%
- **Others Passed Count**: 8000
- **Is Decisive**: yes
- **Insight**: This is a decisive blocker

#### Recommendation
**Action**: accept_limitation
**Priority**: low
**Guidance**: May need alternative approach

---

### Blocker #3: \`(emotions.joy >= 0.5 OR emotions.curiosity >= 0.4)\`


**Condition**: \`unknown ? N/A\`
**Fail% global**: 25.00% (2500 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: low
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
None







#### Distribution Analysis
- **Average Violation**: 0.10
- **Median (P50)**: 0.00
- **90th Percentile (P90)**: 0.00
- **Interpretation**: Normal distribution

#### Ceiling Analysis
- **Max Observed**: 0.65
- **Threshold**: N/A
- **Ceiling Gap**: 0.00 (achievable)
- **Insight**: Easily achievable

#### Near-Miss Analysis
- **Near-Miss Rate**: 0.00% (epsilon: 0.00)
- **Tunability**: high
- **Insight**: Many near misses

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 0.00%
- **Others Passed Count**: 0
- **Is Decisive**: no
- **Insight**: Not decisive

#### Recommendation
**Action**: tune_threshold
**Priority**: high
**Guidance**: Small adjustment could help

---


> **Note on Sole-Blocker N values**: Each clause's N represents samples where all *other* clauses passed (excluding itself). Different clauses have different "others" sets, so N naturally varies. This is correct behavior indicating which clause is the decisive blocker when others succeed.


## 🎯 Prototype Fit Analysis

Ranking of emotion prototypes by how well they fit this expression's mood regime.

> **[AXIS-ONLY FIT]** **[IN-REGIME]**
> *Computed from mood-regime axis constraints only (emotion clauses not enforced).*

**Population**: stored-mood-regime (N=3; predicate: moodAxes.arousal >= 0.3, moodAxes.threat <= 0.6, moodAxes.valence >= 0.4; hash: 441edcdd).
| Rank | Prototype | Gate Pass | P(I≥t) | Conflict | Composite |
|------|-----------|-----------|--------|----------|-----------|
| 1 | **joy** | 0.00% | 0.00% | 0.00% | 0.35 |
| 2 | **curiosity** | 0.00% | 0.00% | 0.00% | 0.35 |
| 3 | **fear** | 0.00% | 0.00% | 66.67% | 0.22 |

### Top 3 Prototype Details

#### 1. joy

- **Intensity Distribution**: P50=0.00, P90=0.00, P95=0.00
- **Conflicting Axes**: None

#### 2. curiosity

- **Intensity Distribution**: P50=0.00, P90=0.00, P95=0.00
- **Conflicting Axes**: None

#### 3. fear

- **Intensity Distribution**: P50=0.00, P90=0.00, P95=0.00
- **Conflicting Axes**: valence (weight=-0.80, wants negative), threat (weight=0.90, wants positive)
- **Conflict Magnitude**: 1.70

---

## Non-Axis Clause Feasibility

> **[NON-AXIS ONLY]** **[IN-REGIME]**
> *Evaluates emotion/sexual/delta clauses within mood-regime using final values.*

No non-axis clauses found in prerequisites.

## 🧭 Implied Prototype from Prerequisites

Analysis of which prototypes best match the expression's constraint pattern.

**Population**: stored-mood-regime (N=3; predicate: moodAxes.arousal >= 0.3, moodAxes.threat <= 0.6, moodAxes.valence >= 0.4; hash: 441edcdd).

### Target Signature

| Axis | Direction | Importance |
|------|-----------|------------|
| valence | ↑ High | 0.60 |
| arousal | ↑ High | 0.57 |
| threat | ↓ Low | 0.35 |

### Top 5 by Cosine Similarity

| Rank | Prototype | Similarity | Gate Pass | Combined |
|------|-----------|------------|-----------|----------|
| 1 | **joy** | 0.90 | 0.00% | 0.54 |
| 2 | **curiosity** | 0.89 | 0.00% | 0.54 |
| 3 | **fear** | -0.31 | 0.00% | -0.19 |

### Top 5 by Gate Pass Rate

| Rank | Prototype | Gate Pass | Similarity | Combined |
|------|-----------|-----------|------------|----------|
| 1 | **joy** | 0.00% | 0.90 | 0.54 |
| 2 | **fear** | 0.00% | -0.31 | -0.19 |
| 3 | **curiosity** | 0.00% | 0.89 | 0.54 |

### Top 5 by Combined Score

| Rank | Prototype | Combined | Similarity | Gate Pass |
|------|-----------|----------|------------|----------|
| 1 | **joy** | 0.54 | 0.90 | 0.00% |
| 2 | **curiosity** | 0.54 | 0.89 | 0.00% |
| 3 | **fear** | -0.19 | -0.31 | 0.00% |

---

## 🔍 Prototype Gap Detection

Analysis of prototype coverage in "prototype space".

**Population**: stored-mood-regime (N=3; predicate: moodAxes.arousal >= 0.3, moodAxes.threat <= 0.6, moodAxes.valence >= 0.4; hash: 441edcdd).

### ✅ Good Coverage

**Nearest Distance**: 0.17 - within acceptable range.

**Distance Context**: Distance 0.17 is farther than 0% of prototype nearest-neighbor distances (z=-1.24).

### k-Nearest Prototypes

| Rank | Prototype | Distance | Weight Dist | Gate Dist |
|------|-----------|----------|-------------|----------|
| 1 | **curiosity** | 0.17 | 0.25 | 0.00 |
| 2 | **joy** | 0.22 | 0.31 | 0.00 |
| 3 | **fear** | 0.76 | 1.09 | 0.00 |

---

## Report Integrity Warnings
- I1_GATE_FAILED_NONZERO_FINAL: Gate failed but final intensity is non-zero in stored contexts. [population=c48b20d4; prototype=joy; signal=final] examples: index 0, 1, 2, 3
- I2_PASSRATE_EXCEEDS_GATEPASS: Pass rate for final >= threshold exceeds gate pass rate. [population=c48b20d4; prototype=joy; signal=final] examples: index 0, 1, 2
- I3_GATEPASS_ZERO_NONZERO_FINAL: Gate pass rate is zero but final distribution has non-zero percentiles. [population=c48b20d4; prototype=joy; signal=final] examples: index 0, 1, 2, 3
- I1_GATE_FAILED_NONZERO_FINAL: Gate failed but final intensity is non-zero in stored contexts. [population=441edcdd; prototype=joy; signal=final] examples: index 0, 1, 2
- I2_PASSRATE_EXCEEDS_GATEPASS: Pass rate for final >= threshold exceeds gate pass rate. [population=441edcdd; prototype=joy; signal=final] examples: index 0, 1, 2
- I3_GATEPASS_ZERO_NONZERO_FINAL: Gate pass rate is zero but final distribution has non-zero percentiles. [population=441edcdd; prototype=joy; signal=final] examples: index 0, 1, 2
- I1_GATE_FAILED_NONZERO_FINAL: Gate failed but final intensity is non-zero in stored contexts. [population=c48b20d4; prototype=fear; signal=final] examples: index 0, 1, 2, 3
- I3_GATEPASS_ZERO_NONZERO_FINAL: Gate pass rate is zero but final distribution has non-zero percentiles. [population=c48b20d4; prototype=fear; signal=final] examples: index 0, 1, 2, 3
- I1_GATE_FAILED_NONZERO_FINAL: Gate failed but final intensity is non-zero in stored contexts. [population=441edcdd; prototype=fear; signal=final] examples: index 0, 1, 2
- I3_GATEPASS_ZERO_NONZERO_FINAL: Gate pass rate is zero but final distribution has non-zero percentiles. [population=441edcdd; prototype=fear; signal=final] examples: index 0, 1, 2

> **Impact (full sample)**: Gate/final mismatches can invalidate pass-rate and blocker metrics; treat threshold feasibility as provisional until resolved.

## Legend

### Global Metrics
- **Trigger Rate**: Probability (0-100%) that the expression evaluates to true across random samples
- **Confidence Interval**: 95% Wilson score interval indicating statistical certainty of the trigger rate
- **Sample Size**: Number of random state pairs generated for simulation
- **Rarity Categories**: impossible (0%), extremely_rare (<0.001%), rare (<0.05%), normal (<2%), frequent (>=2%)

### Per-Clause Metrics
- **Fail% global**: Percentage of samples where this specific clause evaluated to false (unconditional)
- **Fail% | mood-pass**: Percentage of samples where this clause evaluated to false within the mood regime
- **Gate pass (mood)**: Percentage of mood-regime samples where gates passed (emotion-threshold clauses only)
- **Gate clamp (mood)**: Percentage of mood-regime samples where gates failed and the final intensity was clamped to 0 (emotion-threshold clauses only)
- **Pass | gate (mood)**: Percentage of gate-pass samples that passed the threshold within the mood regime (emotion-threshold clauses only)
- **Pass | mood (mood)**: Percentage of mood-regime samples that passed the threshold (emotion-threshold clauses only)
- **Support**: Number of samples evaluated for this clause (evaluation count)
- **Clamp-trivial (regime)**: Clause is trivially satisfied because gates always clamp intensity to 0 in regime (<= or < thresholds only)
- **Violation Magnitude**: How far the actual value was from the threshold when the clause failed
- **P50 (Median)**: Middle value of violations; 50% of failures had violations at or below this
- **P90 (90th Percentile)**: 90% of failures had violations at or below this; indicates severity of worst cases
- **P95 (95th Percentile)**: 95% of failures had violations at or below this; shows extreme violations
- **P99 (99th Percentile)**: 99% of failures had violations at or below this; identifies outlier violations
- **Min Observed**: Lowest value observed for this variable across all samples
- **Mean Observed**: Average value observed for this variable across all samples
- **Near-Miss Rate**: Percentage of ALL samples where the value was within epsilon of the threshold (close calls)
- **Epsilon**: The tolerance distance used to detect near-misses (typically 5% of value range)
- **Sole-Blocker Rate (N)**: Failure rate among samples where ALL OTHER clauses passed. N differs per clause because each clause excludes itself from the "others" check: Clause A's N = samples where B,C,D... passed; Clause B's N = samples where A,C,D... passed. This variance is mathematically correct and order-invariant
- **Bound**: The relevant extreme value for verifying Gap. For \`>=\` operators: Max Observed (highest value seen). For \`<=\` operators: Min Observed (lowest value seen)
- **Ceiling Gap**: Direction-aware calculation. For \`>=\` operators: (Threshold - Max Observed). For \`<=\` operators: (Min Observed - Threshold). Positive = threshold unreachable; negative = threshold achievable

### Tunability Levels
- **High**: >10% near-miss rate; threshold adjustments will help significantly
- **Moderate**: 2-10% near-miss rate; threshold adjustments may help somewhat
- **Low**: <2% near-miss rate; threshold adjustments won't help; fix upstream

### Severity Levels
- **Critical**: Ceiling detected or fundamentally broken condition
- **High**: Decisive blocker with tuning potential
- **Medium**: Moderate contributor to failures
- **Low**: Other clauses fail first; lower priority

### Recommended Actions
- **redesign**: Condition is fundamentally problematic; rethink the logic
- **tune_threshold**: Adjust threshold value; quick win available
- **adjust_upstream**: Modify prototypes, gates, or weights that feed this variable
- **lower_priority**: Focus on other blockers first
- **investigate**: Needs further analysis

### Problem Flags
- **[CEILING]**: Threshold is unreachable (max observed never reaches threshold)
- **[DECISIVE]**: This clause is the primary bottleneck
- **[TUNABLE]**: Many samples are borderline; small adjustments help
- **[UPSTREAM]**: Values are far from threshold; fix upstream data
- **[OUTLIERS-SKEW]**: Median violation much lower than mean (outliers skew average)
- **[SEVERE-TAIL]**: Some samples fail badly while most are moderate
"
`;

exports[`MonteCarloReportGenerator Snapshot Tests Full Report Snapshots generates consistent output with sensitivity data: sensitivity-analysis-full-report 1`] = `
"# Monte Carlo Analysis Report

**Expression**: test:sensitivity_snapshot_expression
**Generated**: [TIMESTAMP]
**Distribution**: uniform
**Sample Size**: 10000
**Sampling Mode**: static - Prototype-gated sampling (emotions derived from mood axes; not independent)
**Gating model**: HARD (gate fail => final = 0)
**Regime Note**: Report includes global vs in-regime (mood-pass) statistics



---

## Population Summary

- **Total samples**: 10,000 (in-regime 0; 0.00%)
- **Stored contexts**: 4 of 10,000 (in-regime 4; 100.00%; limit 4)
- **Mood regime**: Mood axis constraints derived from gates of emotion/sexual prototypes referenced in prerequisites.
> **Note**: Stored contexts are capped at 4, so sections labeled "Population: stored-*" may not match full-sample counts.


---

## Signal Lineage

- **Raw**: Weighted sum of normalized axes (clamped to 0..1).
- **Gated**: Raw value when gate constraints pass; otherwise 0.
- **Final**: Hard-gated output (final = gated).

**Gate input scales**
- Mood axes: raw [-100, 100] -> normalized [-1, 1]
- Sexual axes: raw [0, 100] -> normalized [0, 1] (sexual_arousal derived, clamped)
- Affect traits: raw [0, 100] -> normalized [0, 1]

---

## Executive Summary

**Trigger Rate**: 15.00% (95% CI: 14.00% - 16.00%)
**Rarity**: frequent

Sensitivity analysis snapshot test

---

## Independence Baseline Comparison

This section compares Monte Carlo results against naive probability estimates (assuming clause independence) to identify correlation effects. Deviations indicate clauses are not statistically independent.

| Metric | Value |
|--------|-------|
| Naive probability (product of pass rates) | 100.00% |
| Expected hits per 10,000 samples | 10000.00 |
| Actual hits | 1500 |
| P(0 hits \\| expected=10000.00) | 0 |

### Interpretation

✅ **Normal**: Actual hits (1500) align with expected (10000.0).

### Clause Pass Rate Factors

| Clause | Pass Rate (in-regime) |
|--------|------------------------|
| emotions.joy | 100.00% |
| emotions.fear | 100.00% |
| emotions.joy | 100.00% |
| emotions.curiosity | 100.00% |

---

## Sampling Coverage

**Sampling Mode**: static

### Summary by Domain

| Domain | Variables | Range Coverage | Bin Coverage | Tail Low | Tail High | Zero Rate Avg | Rating |
|--------|-----------|----------------|--------------|----------|-----------|---------------|--------|
| emotions | 3 | 75.00% | 70.00% | 5.00% | 4.00% | N/A | good |
| moodAxes | 3 | 80.00% | 75.00% | 6.00% | 5.00% | N/A | good |

### Lowest Coverage Variables

| Variable | Range Coverage | Bin Coverage | Tail Low | Tail High | Rating |
|----------|----------------|--------------|----------|-----------|--------|
| emotions.joy | 80.00% | 75.00% | 5.00% | 4.00% | good |
| emotions.fear | 70.00% | 65.00% | 4.00% | 3.00% | moderate |

Notes:
- Range coverage is observed span divided by domain span.
- Bin coverage is occupancy across 10 equal-width bins.
- Tail coverage is the share of samples in the bottom/top 10.00% of the domain.
- Variables with unknown domain ranges are excluded from summaries.

### Coverage Conclusions

- emotions: bin coverage is 70%, indicating clumping. Rates may be biased toward a few common regimes.
- emotions: observed range spans only 75% of the domain. This suggests ceilings/floors or gating; feasibility conclusions involving missing ranges are low-confidence.
- Across variables: 1 show truncated range. Those regions are effectively unvalidated by current sampling.
- Feasibility rates may be biased by overrepresented regimes; edge-case prerequisites may be incorrectly labeled rare/impossible.
- Worst range coverage: min=70%.
- Worst upper-tail coverage: min tailHigh=3.0000%.
- Worst lower-tail coverage: min tailLow=4.0000%.

---

## Ground-Truth Witnesses

No triggering states found during simulation.


---

## Blocker Analysis
Signal: final (gate-clamped intensity).
> **[FULL PREREQS]** **[GLOBAL]**
> *Computed from ALL prerequisites using post-gate (final) values.*

### Probability Funnel
- **Full sample**: 10,000
- **Mood-regime pass**: N/A
- **Prototype gate pass**: N/A
- **Threshold pass | gate**: N/A
- **OR union pass | mood-pass**: N/A
- **Final trigger**: 15.00% (1500 / 10000)

### Blocker #1: \`emotions.joy >= 0.5\`


**Condition**: \`emotions.joy >= 0.5\`
**Fail% global**: 75.00% (7500 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: high
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
None







#### Distribution Analysis
- **Average Violation**: 0.30
- **Median (P50)**: 0.20
- **90th Percentile (P90)**: 0.40
- **Interpretation**: Normal distribution of values

#### Ceiling Analysis
- **Max Observed**: 0.60
- **Threshold**: 0.50
- **Ceiling Gap**: -0.10 (achievable)
- **Insight**: Threshold is reachable

#### Near-Miss Analysis
- **Near-Miss Rate**: 8.00% (epsilon: 0.05)
- **Tunability**: moderate
- **Insight**: Some near misses detected

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 30.00%
- **Others Passed Count**: 5000
- **Is Decisive**: no
- **Insight**: Not a decisive blocker

#### Recommendation
**Action**: tune_threshold
**Priority**: medium
**Guidance**: Consider adjusting threshold

---

### Blocker #2: \`emotions.fear <= 0.3\`


**Condition**: \`emotions.fear <= 0.3\`
**Fail% global**: 40.00% (4000 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: medium
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
[DECISIVE]







#### Distribution Analysis
- **Average Violation**: 0.15
- **Median (P50)**: 0.15
- **90th Percentile (P90)**: 0.25
- **Interpretation**: Values skewed toward upper range

#### Ceiling Analysis
- **Min Observed**: N/A
- **Threshold**: 0.30
- **Ceiling Gap**: 0.05 (UNREACHABLE)
- **Insight**: Ceiling is challenging

#### Near-Miss Analysis
- **Near-Miss Rate**: 3.00% (epsilon: 0.05)
- **Tunability**: low
- **Insight**: Few near misses

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 60.00%
- **Others Passed Count**: 8000
- **Is Decisive**: yes
- **Insight**: This is a decisive blocker

#### Recommendation
**Action**: accept_limitation
**Priority**: low
**Guidance**: May need alternative approach

---

### Blocker #3: \`(emotions.joy >= 0.5 OR emotions.curiosity >= 0.4)\`


**Condition**: \`unknown ? N/A\`
**Fail% global**: 25.00% (2500 / 10000)
**Fail% | mood-pass**: N/A
**Severity**: low
**Redundant in regime**: N/A
**Clamp-trivial in regime**: N/A

#### Flags
None







#### Distribution Analysis
- **Average Violation**: 0.10
- **Median (P50)**: 0.00
- **90th Percentile (P90)**: 0.00
- **Interpretation**: Normal distribution

#### Ceiling Analysis
- **Max Observed**: 0.65
- **Threshold**: N/A
- **Ceiling Gap**: 0.00 (achievable)
- **Insight**: Easily achievable

#### Near-Miss Analysis
- **Near-Miss Rate**: 0.00% (epsilon: 0.00)
- **Tunability**: high
- **Insight**: Many near misses

#### Sole-Blocker Analysis
- **Sole-Blocker Rate**: 0.00%
- **Others Passed Count**: 0
- **Is Decisive**: no
- **Insight**: Not decisive

#### Recommendation
**Action**: tune_threshold
**Priority**: high
**Guidance**: Small adjustment could help

---


> **Note on Sole-Blocker N values**: Each clause's N represents samples where all *other* clauses passed (excluding itself). Different clauses have different "others" sets, so N naturally varies. This is correct behavior indicating which clause is the decisive blocker when others succeed.

## Global Expression Sensitivity Analysis

This section shows how adjusting thresholds affects the **entire expression trigger rate**, not just individual clause pass rates.
This is the key metric for tuning—it answers "What actually happens to the expression if I change this?"
**Baseline (full sample)**: 15.00% | **Baseline (stored contexts)**: 15.00%
**Population**: full (N=4; predicate: all; hash: c48b20d4).
### 🎯 Global Expression Sensitivity: emotions.joy >= [threshold]


> **Note**: This shows how the threshold change affects the WHOLE EXPRESSION trigger rate, not just the clause.

| Threshold | Trigger Rate | Change | Samples |
|-----------|--------------|--------|---------|
| 0.35 | 45.00% | +30.00 pp (×3.0) | 10,000 |
| 0.40 | 35.00% | +20.00 pp (×2.3) | 10,000 |
| 0.45 | 25.00% | +10.00 pp (×1.7) | 10,000 |
| **0.50** | **15.00%** | **baseline (stored contexts)** | 10,000 |
| 0.55 | 8.00% | -7.00 pp (×0.5) | 10,000 |
| 0.60 | 4.00% | -11.00 pp (×0.3) | 10,000 |
| 0.65 | 2.00% | -13.00 pp (×0.1) | 10,000 |
## Marginal Clause Pass-Rate Sweep

This sweep shows how adjusting thresholds changes marginal clause pass rates across stored contexts.
It does **not** estimate overall expression trigger rate.
**Population**: full (N=4; predicate: all; hash: c48b20d4).
### Marginal Clause Pass-Rate Sweep: emotions.joy >= [threshold]


| Threshold | Pass Rate | Change | Samples |
|-----------|-----------|--------|---------|
| 0.35 | 85.00% | +60.00 pp (×3.4) | 10,000 |
| 0.40 | 70.00% | +45.00 pp (×2.8) | 10,000 |
| 0.45 | 50.00% | +25.00 pp (×2.0) | 10,000 |
| **0.50** | **25.00%** | **baseline (stored contexts)** | 10,000 |
| 0.55 | 10.00% | -15.00 pp (×0.4) | 10,000 |
| 0.60 | 5.00% | -20.00 pp (×0.2) | 10,000 |
| 0.65 | 2.00% | -23.00 pp (×0.1) | 10,000 |
## Non-Axis Clause Feasibility

> **[NON-AXIS ONLY]** **[IN-REGIME]**
> *Evaluates emotion/sexual/delta clauses within mood-regime using final values.*

No non-axis clauses found in prerequisites.

## Legend

### Global Metrics
- **Trigger Rate**: Probability (0-100%) that the expression evaluates to true across random samples
- **Confidence Interval**: 95% Wilson score interval indicating statistical certainty of the trigger rate
- **Sample Size**: Number of random state pairs generated for simulation
- **Rarity Categories**: impossible (0%), extremely_rare (<0.001%), rare (<0.05%), normal (<2%), frequent (>=2%)

### Per-Clause Metrics
- **Fail% global**: Percentage of samples where this specific clause evaluated to false (unconditional)
- **Fail% | mood-pass**: Percentage of samples where this clause evaluated to false within the mood regime
- **Gate pass (mood)**: Percentage of mood-regime samples where gates passed (emotion-threshold clauses only)
- **Gate clamp (mood)**: Percentage of mood-regime samples where gates failed and the final intensity was clamped to 0 (emotion-threshold clauses only)
- **Pass | gate (mood)**: Percentage of gate-pass samples that passed the threshold within the mood regime (emotion-threshold clauses only)
- **Pass | mood (mood)**: Percentage of mood-regime samples that passed the threshold (emotion-threshold clauses only)
- **Support**: Number of samples evaluated for this clause (evaluation count)
- **Clamp-trivial (regime)**: Clause is trivially satisfied because gates always clamp intensity to 0 in regime (<= or < thresholds only)
- **Violation Magnitude**: How far the actual value was from the threshold when the clause failed
- **P50 (Median)**: Middle value of violations; 50% of failures had violations at or below this
- **P90 (90th Percentile)**: 90% of failures had violations at or below this; indicates severity of worst cases
- **P95 (95th Percentile)**: 95% of failures had violations at or below this; shows extreme violations
- **P99 (99th Percentile)**: 99% of failures had violations at or below this; identifies outlier violations
- **Min Observed**: Lowest value observed for this variable across all samples
- **Mean Observed**: Average value observed for this variable across all samples
- **Near-Miss Rate**: Percentage of ALL samples where the value was within epsilon of the threshold (close calls)
- **Epsilon**: The tolerance distance used to detect near-misses (typically 5% of value range)
- **Sole-Blocker Rate (N)**: Failure rate among samples where ALL OTHER clauses passed. N differs per clause because each clause excludes itself from the "others" check: Clause A's N = samples where B,C,D... passed; Clause B's N = samples where A,C,D... passed. This variance is mathematically correct and order-invariant
- **Bound**: The relevant extreme value for verifying Gap. For \`>=\` operators: Max Observed (highest value seen). For \`<=\` operators: Min Observed (lowest value seen)
- **Ceiling Gap**: Direction-aware calculation. For \`>=\` operators: (Threshold - Max Observed). For \`<=\` operators: (Min Observed - Threshold). Positive = threshold unreachable; negative = threshold achievable

### Tunability Levels
- **High**: >10% near-miss rate; threshold adjustments will help significantly
- **Moderate**: 2-10% near-miss rate; threshold adjustments may help somewhat
- **Low**: <2% near-miss rate; threshold adjustments won't help; fix upstream

### Severity Levels
- **Critical**: Ceiling detected or fundamentally broken condition
- **High**: Decisive blocker with tuning potential
- **Medium**: Moderate contributor to failures
- **Low**: Other clauses fail first; lower priority

### Recommended Actions
- **redesign**: Condition is fundamentally problematic; rethink the logic
- **tune_threshold**: Adjust threshold value; quick win available
- **adjust_upstream**: Modify prototypes, gates, or weights that feed this variable
- **lower_priority**: Focus on other blockers first
- **investigate**: Needs further analysis

### Problem Flags
- **[CEILING]**: Threshold is unreachable (max observed never reaches threshold)
- **[DECISIVE]**: This clause is the primary bottleneck
- **[TUNABLE]**: Many samples are borderline; small adjustments help
- **[UPSTREAM]**: Values are far from threshold; fix upstream data
- **[OUTLIERS-SKEW]**: Median violation much lower than mean (outliers skew average)
- **[SEVERE-TAIL]**: Some samples fail badly while most are moderate
"
`;

exports[`MonteCarloReportGenerator Snapshot Tests Integrity Warnings Snapshots generates consistent integrity warnings output: integrity-warnings 1`] = `[]`;
